--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,6 @@
-@CHARSET "GBK";
+@CHARSET "UTF-8";
 body { 
-	padding-top: 70px; 
-	font-size: 14px;
+	padding-top: 50px; 
 }
 .top-bar ul>li {
 	font-size: 14x;
@@ -28,9 +27,6 @@ ul.nav.submenu li:last-child  a {
 	border-bottom-left-radius: 0px;
 	border-bottom-right-radius: 0px;
 }
-#J_productMenu {
-	min-width: 125px; left: 0px;
-}
 table.table {
 	text-align: center;
 }
@@ -53,16 +49,3 @@ table.table > tbody > tr > td {
 ul.submenu {
 	overflow: hidden;
 }
-
-/** imageTailor begin **/
-.handler { width: 10px; height: 10px; background-color: #666; position: absolute; }
-.left-handler{ left: 0px; }
-.top-handler { top: 0px; }
-.right-handler { right: 0px; }
-.bottom-handler { bottom: 0px; }
-.left-handler.top-handler { cursor: nw-resize; }
-.left-handler.bottom-handler { cursor: sw-resize; }
-.right-handler.top-handler { cursor: ne-resize; }
-.right-handler.bottom-handler { cursor: se-resize; }
-.img-mask { cursor: crosshair; } 
-/** imageTailor end **/
